# object_pose_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: ObjectPose.msg
